RESOLVED FIXED301030
A <template> element cannot have a shadow root
https://bugs.webkit.org/show_bug.cgi?id=301030
Summary A <template> element cannot have a shadow root
Anne van Kesteren
Reported 2025-10-18 01:48:40 PDT
.
Attachments
Anne van Kesteren
Comment 1 2025-10-18 01:50:57 PDT
EWS
Comment 2 2025-10-18 04:19:35 PDT
Committed 301768@main (0cddc15dc7f3): <https://commits.webkit.org/301768@main> Reviewed commits have been landed. Closing PR #52606 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-18 04:20:11 PDT
Note You need to log in before you can comment on or make changes to this bug.