A <template> element cannot have a shadow root https://bugs.webkit.org/show_bug.cgi?id=301030

Reviewed by Ryosuke Niwa.

Assert that instead of doing work.

Canonical link: https://commits.webkit.org/301768@main